[package]
name = "rustpad"
version = "1.0.1"
description = "Multi-threaded Padding Oracle attacks against any service."
authors = ["Csonka Mihaly <csonka.mihaly@hotmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "2.33", default-features = true, features = ["yaml", "wrap_help"] }
reqwest = { version = "0.11", default-features = true, features = ["blocking"] }
anyhow = "1.0"
base64 = "0.13"
hex = "0.4"
urlencoding = "2.1"
is_executable = "1.0"
rayon = "1.5"
# use crossterm for windows compatibility
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.22", default-features = true, features = ["event-stream"] }
getset = "0.1"
crossbeam = "0.8"
tui-logger = "0.6"
log = "0.4"
retry = "1.3"
humantime = "2.1"
itertools = "0.10"
futures = "0.3"
futures-timer = "3.0"
async-std = "1.10"
async-scoped = { version = "0.7", default-features = false, features = ["use-async-std"] }
atty = "0.2"